--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -9,11 +9,12 @@
 
     <View
         android:id="@+id/view_enemy_square"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="96dp"
         android:background="@drawable/spr_player_turn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="Ooops! no todo list!" />
 
     <ImageView
@@ -34,6 +35,7 @@
         android:fontFamily="@font/roboto"
         android:layout_marginStart="8dp"
         android:textColor="@color/black"
+        android:paddingEnd="24dp"
         android:textSize="24dp"
         android:text="enemy Name 1"
         app:layout_constraintStart_toEndOf="@id/iv_enemy_info"
