--- a/app/src/main/res/layout/money_item.xml
+++ b/app/src/main/res/layout/money_item.xml
@@ -3,4 +3,5 @@
     android:id="@+id/iv_money_card"
     android:layout_width="64dp"
     android:layout_height="92dp"
+    android:layout_marginStart="8dp"
     />
