--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="red_700">#FFD32F2F</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="dark_grey_900">#2C2C2C</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
