prepare force deal, sly deal & deal breaker action

--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="-4dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_add_card"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,7 +118,7 @@
             android:id="@+id/iv_action_rent_center_image"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/spr_card_action_rent_any"
+            android:src="@drawable/spr_card_asset_brown_apartement"
             android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
