--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,5 +1,7 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_root_card"
     android:layout_width="50dp"
     android:layout_height="78dp"
     android:layout_marginStart="24dp">
@@ -10,11 +12,10 @@
         android:layout_height="0dp"
         android:layout_marginTop="-4dp"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_add_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_add_card">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_card"
@@ -23,8 +24,101 @@
             android:scaleType="fitXY"
             android:src="@drawable/spr_card_asset_brown_apartement"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_parent_wild_card"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_wild_card_top"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:scaleType="fitXY"
+                android:rotation="180"
+                android:src="@drawable/spr_card_asset_aqua_apartement"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_wild_card_bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/spr_card_asset_brown_apartement"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_wild_card_asset_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:text=" Asset A "
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="6dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_wild_card_asset_price"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="-3dp"
+                android:layout_marginEnd="-4dp"
+                android:background="@drawable/spr_card_asset_price_background"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@id/iv_wild_card_bottom"
+                app:layout_constraintBottom_toBottomOf="@id/iv_wild_card_bottom">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_wild_card_asset_price_m_logo"
+                    android:layout_width="5dp"
+                    android:layout_height="10dp"
+                    android:layout_marginEnd="9dp"
+                    android:src="@drawable/spr_card_asset_m_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_wild_card_asset_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_wild_card_asset_price_m"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="2dp"
+                    android:text="M"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="4dp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_wild_card_asset_price"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <TextView
             android:id="@+id/tv_card_asset_name"
@@ -92,17 +186,17 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_parent_action_rent_card"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="-4dp"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_add_card"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_add_card">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_action_rent_card"
@@ -111,35 +205,42 @@
             android:scaleType="fitXY"
             android:src="@drawable/spr_card_action_rent_4m"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_action_rent_center_image"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/spr_card_asset_brown_apartement"
             android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/spr_card_asset_brown_apartement"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_action_rent_center_image2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/spr_card_asset_aqua_apartement"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_action_rent_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             android:fontFamily="@font/roboto"
             android:text="All player pay for any selected asset from you"
-            android:textColor="@color/dark_grey_900"
             android:textAlignment="center"
-            android:layout_marginBottom="2dp"
+            android:textColor="@color/dark_grey_900"
             android:textSize="3dp"
             app:layout_constraintBottom_toTopOf="@id/iv_action_rent_center_image"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_action_rent_title"
@@ -147,14 +248,13 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
             android:text="Asset ?"
-            android:textColor="@color/black"
             android:textAlignment="center"
-            android:textStyle="bold"
+            android:textColor="@color/black"
             android:textSize="6dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/tv_action_rent_desc"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
