--- a/app/src/main/res/layout/card_item_asset.xml
+++ b/app/src/main/res/layout/card_item_asset.xml
@@ -25,6 +25,98 @@
             app:layout_constraintTop_toTopOf="parent"
             />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_parent_wild_card"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_wild_card_top"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:scaleType="fitXY"
+                android:rotation="180"
+                android:src="@drawable/spr_card_asset_aqua_apartement"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_wild_card_bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/spr_card_asset_brown_apartement"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_wild_card_asset_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:text=" Asset A "
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="6dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_wild_card_asset_price"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="-3dp"
+                android:layout_marginEnd="-4dp"
+                android:background="@drawable/spr_card_asset_price_background"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@id/iv_wild_card_bottom"
+                app:layout_constraintBottom_toBottomOf="@id/iv_wild_card_bottom">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_wild_card_asset_price_m_logo"
+                    android:layout_width="5dp"
+                    android:layout_height="10dp"
+                    android:layout_marginEnd="9dp"
+                    android:src="@drawable/spr_card_asset_m_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_wild_card_asset_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_wild_card_asset_price_m"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="2dp"
+                    android:text="M"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="4dp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_wild_card_asset_price"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
             android:id="@+id/tv_card_asset_name"
             android:layout_width="wrap_content"
@@ -34,8 +126,8 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="6dp"
-            android:visibility="gone"
-            android:layout_marginTop="4dp"
+            android:visibility="visible"
+            android:layout_marginTop="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,9 +136,10 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
+            android:layout_marginEnd="-4dp"
             android:background="@drawable/spr_card_asset_price_background"
             android:orientation="horizontal"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="@id/iv_card"
             app:layout_constraintTop_toTopOf="@id/iv_card">
 
