- set logic for wild card

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,23 @@
 
         <include
             android:id="@+id/layout_include_selected_flip_card"
-            layout="@layout/card_item"
+            layout="@layout/card_item_non_asset"
+            android:layout_width="63dp"
+            android:visibility="gone"
+            android:layout_height="100dp"
+            />
+
+        <include
+            android:id="@+id/layout_include_selected_wild_card"
+            layout="@layout/card_item_wild_pv"
+            android:layout_width="63dp"
+            android:visibility="gone"
+            android:layout_height="100dp"
+            />
+
+        <include
+            android:id="@+id/layout_include_selected_wild_card_forced_deal"
+            layout="@layout/card_item_wild_pv"
             android:layout_width="63dp"
             android:visibility="gone"
             android:layout_height="100dp"
